<resources>
    <string name="app_name">Crim_intent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent crime report</string>
    <string name="report_send">Send crime report</string>

</resources>